Take rabbit remarks into account
Signed-off-by: Antoine LIMOUZIN <antoine.limouzin@rte-france.com>